# sodium-ion-ess

./: .gitignore  LICENSE  README.md  final_validation.json  material_cache.json  requirements.txt  result.json
docs/: Research Paper.docx  paper.md  recommendation-engine.md  reduction-engine.md  ~$search Paper.docx
nfpp_sodium_ion/: pyproject.toml
nfpp_sodium_ion/src/: __init__.py
nfpp_sodium_ion/src/calibration/: derivation.py  parameter_derivation.py  verify_parameters.py
nfpp_sodium_ion/src/cell_parameters/: cell_alpha.py  parameter_builder.py  parameter_derivation.py
nfpp_sodium_ion/src/cell_parameters/data/base/: cell.py  chemistry.py  constants.py
nfpp_sodium_ion/src/cell_parameters/data/degradation/: __init__.py  cei_growth.py  loss_of_lithium_equivalent.py  sei_growth.py
nfpp_sodium_ion/src/cell_parameters/data/electrodes/: __init__.py  hard_carbon_anode.py  nfpp_cathode.py  separator.py
nfpp_sodium_ion/src/cell_parameters/data/electrolyte/: __init__.py  na_pfp_dfo.py
nfpp_sodium_ion/src/cell_parameters/data/interface/: __init__.py
nfpp_sodium_ion/src/cell_parameters/data/kinetics/: __init__.py  exchange_current_density.py  reaction_rates.py
nfpp_sodium_ion/src/cell_parameters/data/mechanics/: __init__.py  elastic_moduli.py  swelling_coefficients.py  thermal_expansion.py
nfpp_sodium_ion/src/cell_parameters/data/thermal/: __init__.py  heat_capacity.py  heat_generation.py  thermal_conductivity.py
nfpp_sodium_ion/src/cell_parameters/data/transport/: __init__.py  conductivity.py  diffusivity.py
src/: __init__.py  core_pipeline.ipynb  (+3 more)
(+44 files in other folders)
